[workspace]
members = [".", "macro"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/PhiSyX/lexa-prompt"
description = "Utilitaires lié aux entrées utilisateur, IO."

[package]
name = "lexa-prompt"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
lexa-prompt-macro = { version = "^0.1", path = "macro" }
inquire = { version = "^0.6" }
log = { version = "^0.4" }
thiserror = { version = "^1.0" }
