[package]
name = "lexa-prompt-macro"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
proc-macro = true

[dependencies]
lexa-syn = { version = "^0.1" }
syn = { version = "^2.0", features = ["full"] }
